--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ cffi==1.10.0
 chardet==3.0.4
 discord.py==0.16.11
 multidict==3.1.3
+psycopg2==2.7.3.1
 pycparser==2.18
 PyNaCl==1.0.1
+recordtype==1.1
 six==1.10.0
 websockets==3.4
